--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,15 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:7.5'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.4.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.16'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.32'
+
 }
 
 test {
